--- a/home.html
+++ b/home.html
@@ -180,6 +180,89 @@
             font-weight: 600;
             color: #111827;
         }
+
+        /* --- Cartão de Metas de Hoje --- */
+        .metas-container {
+            background-color: #ffffff;
+            border: 1px solid var(--card-border);
+            border-radius: 12px;
+            padding: 24px;
+            margin-top: 20px; /* Espaço entre este cartão e os de cima */
+        }
+
+        .metas-header {
+            display: flex;
+            align-items: center;
+            gap: 12px;
+            color: #1f2937;
+            margin-bottom: 24px;
+        }
+
+        .metas-header h2 {
+            font-size: 16px;
+            font-weight: 500;
+        }
+
+        .metas-lista {
+            display: flex;
+            flex-direction: column;
+            gap: 20px; /* Espaço entre cada meta */
+        }
+
+        /* Flexbox principal de cada item (Texto de um lado, Badge do outro) */
+        .meta-info {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 8px;
+        }
+
+        .bolinha-meta {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+        }
+
+        /* Bolinhas coloridas */
+        .meta-dot {
+            width: 8px;
+            height: 8px;
+            border-radius: 50%;
+        }
+        .meta-dot.blue { background-color: #4da0d6; }
+        .meta-dot.purple { background-color: #b594d6; }
+        .meta-dot.gray { background-color: #d1d5db; }
+
+        .meta-title {
+            font-size: 14px;
+            color: #374151;
+        }
+
+        /* Status (Badge arredondado) */
+        .meta-badge {
+            background-color: #e6e4e9;
+            color: #a481cd;
+            padding: 4px 12px;
+            border-radius: 12px;
+            font-size: 12px;
+            font-weight: 500;
+        }
+
+        /* Barra de progresso (Fundo e Preenchimento) */
+        .progresso-meta {
+            background-color: #eaf0f6;
+            height: 6px;
+            border-radius: 4px;
+            overflow: hidden;
+            width: 100%;
+        }
+
+        .progresso-preenchido {
+            background-color: #4da0d6;
+            height: 100%;
+            border-radius: 4px;
+            transition: width 0.3s ease; /* Animação suave se a barra mudar de tamanho */
+        }
     </style>
 </head>
 <body>
@@ -238,6 +321,52 @@
     <script>
         lucide.createIcons();
     </script>
+    <section class="metas-container">
+            <div class="metas-header">
+                <i data-lucide="bookmark" size="20" stroke-width="2"></i>
+                <h2>Metas de Hoje</h2>
+            </div>
+            
+            <div class="metas-lista">
+                <div class="goal-item">
+                    <div class="meta-info">
+                        <div class="bolinha-meta">
+                            <span class="meta-dot blue"></span>
+                            <span class="meta-title">Leitura de compreensão</span>
+                        </div>
+                        <span class="meta-badge">Completo</span>
+                    </div>
+                    <div class="progresso-meta">
+                        <div class="progresso-preenchido" style="width: 100%;"></div>
+                    </div>
+                </div>
 
+                <div class="goal-item">
+                    <div class="meta-info">
+                        <div class="bolinha-meta">
+                            <span class="meta-dot purple"></span>
+                            <span class="meta-title">Exercícios de matemática</span>
+                        </div>
+                        <span class="meta-badge">3/5</span>
+                    </div>
+                    <div class="progresso-meta">
+                        <div class="progresso-preenchido" style="width: 60%;"></div>
+                    </div>
+                </div>
+
+                <div class="goal-item">
+                    <div class="meta-info">
+                        <div class="bolinha-meta">
+                            <span class="meta-dot gray"></span>
+                            <span class="meta-title">Atividade de escrita criativa</span>
+                        </div>
+                        <span class="meta-badge">Pendente</span>
+                    </div>
+                    <div class="progresso-meta">
+                        <div class="progresso-preenchido" style="width: 0%;"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
 </body>
 </html>
