feat: Linkando CSS externo com página home e definindo padrões

--- a/home.html
+++ b/home.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home(teste)</title>
-    
+
+
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
@@ -12,27 +14,7 @@
     <script src="https://unpkg.com/lucide@latest"></script>
 
     <style>
-        :root {
-            --bg-color: #f7f8f9;
-            --text-main: #1f2937;
-            --text-muted: #6b7280;
-            --primary-blue: #326b8e;
-            --gradient-start: #2c5c7d;
-            --gradient-end: #5798c5;
-            --card-border: #e5e7eb;
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Inter', sans-serif;
-        }
-
-        body {
-            background-color: var(--bg-color);
-            color: var(--text-main);
-        }
+        
 
         /* --- Cabeçalho --- */
         header {
