--- a/pages/relatorios.html
+++ b/pages/relatorios.html
@@ -6,657 +6,9 @@
     <title>Relatórios - Plataforma Educacional</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        html, body {
-            width: 100%;
-            height: 100%;
-            overflow-x: hidden;
-        }
-
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-                'Ubuntu', 'Cantarell', sans-serif;
-            background-color: #f5f7fa;
-            display: flex;
-            flex-direction: column;
-        }
-
-        /* Header */
-       .header {
-            width: 100%;
-            background: linear-gradient(90deg, #2c5f7c, #3f7fa3);
-            padding: 48px 70px;
-            color: white;
-        }
-
-        .header-content {
-            display: flex;
-            justify-content: space-between;
-            align-items: flex-start;
-        }
-
-        /* LADO ESQUERDO */
-        .header-left h1 {
-            font-size: 20px;
-            font-weight: 600;
-            margin: 0 0 6px 0;
-        }
-
-        .header-left p {
-            font-size: 14px;
-            font-weight: 400;
-            opacity: 0.85;
-            margin: 0 0 20px 0;
-        }
-
-        /* BOTÕES DE FILTRO */
-        .filter-buttons {
-            display: flex;
-            gap: 12px;
-        }
-
-        .filter-btn {
-            padding: 10px 20px;
-            border-radius: 22px;
-            border: none;
-            font-size: 14px;
-            font-weight: 500;
-            cursor: pointer;
-            background: rgba(255,255,255,0.25);
-            color: white;
-        }
-
-        .filter-btn.active {
-            background: white;
-            color: #2c5f7c;
-        }
-
-        /* LADO DIREITO (ÍCONES) */
-        .header-right {
-            display: flex;
-            gap: 14px;
-        }
-
-        .icon-btn {
-            width: 42px;
-            height: 42px;
-            border-radius: 14px;
-            border: none;
-            background: rgba(255, 255, 255, 0.25);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            cursor: pointer;
-            transition: 0.2s ease;
-        }
-
-        .icon-btn i {
-            color: #ffffff;
-            font-size: 16px;
-         }
-        /* Main Content */
-        .container {
-            flex: 1;
-            width: 100%;
-            margin: 0 auto;
-            padding: 30px 20px 100px 20px;
-            overflow-y: auto;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        .container > * {
-            width: 100%;
-            max-width: 1200px;
-        }
-
-        /* Cards Grid */
-        .metrics-grid {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 20px;
-            margin-bottom: 40px;
-            width: 100%;
-        }
-
-        .metric-card {
-            background-color: white;
-            border-radius: 12px;
-            padding: 30px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        .metric-card:hover {
-            transform: translateY(-4px);
-            box-shadow: 0 4px 16px rgba(0, 0, 0, 0.12);
-        }
-
-        .metric-label {
-            display: flex;
-            align-items: center;
-            gap: 8px;
-            font-size: 13px;
-            color: #718096;
-            margin-bottom: 12px;
-            font-weight: 500;
-        }
-
-        .metric-icon {
-            font-size: 16px;
-        }
-
-        .metric-value {
-            font-size: 32px;
-            font-weight: 700;
-            color: #2c5282;
-            margin-bottom: 12px;
-        }
-
-        .metric-change {
-            font-size: 12px;
-            color: #a0aec0;
-            background-color: #f7fafc;
-            padding: 6px 12px;
-            border-radius: 6px;
-            display: inline-block;
-        }
-
-        /* Progresso por Área */
-        .progress-section {
-            background-color: white;
-            border-radius: 12px;
-            padding: 30px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
-            width: 100%;
-        }
-
-        .progress-section h2 {
-            font-size: 16px;
-            color: #2d3748;
-            margin-bottom: 25px;
-            font-weight: 600;
-        }
-
-        .progress-item {
-            margin-bottom: 30px;
-        }
-
-        .progress-item:last-child {
-            margin-bottom: 0;
-        }
-
-        .progress-header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 10px;
-        }
-
-        .progress-label {
-            display: flex;
-            align-items: center;
-            gap: 8px;
-            font-size: 14px;
-            color: #2d3748;
-            font-weight: 500;
-        }
-
-        .progress-percentage {
-            font-size: 14px;
-            font-weight: 600;
-            color: #2c5282;
-            display: flex;
-            align-items: center;
-            gap: 6px;
-        }
-
-        .progress-bar-container {
-            width: 100%;
-            height: 8px;
-            background-color: #e2e8f0;
-            border-radius: 10px;
-            overflow: hidden;
-        }
-
-        .progress-bar {
-            height: 100%;
-            background: linear-gradient(90deg, #3182ce 0%, #2c5282 100%);
-            border-radius: 10px;
-            transition: width 0.3s ease;
-        }
-
-        .progress-info {
-            font-size: 12px;
-            color: #a0aec0;
-            margin-top: 6px;
-        }
-
-        /* Section Container */
-        .section-container {
-            margin-top: 40px;
-            width: 100%;
-        }
-
-        /* Activity Section */
-        .activity-section {
-            background-color: white;
-            border-radius: 12px;
-            padding: 30px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
-            width: 100%;
-        }
-
-        .activity-section h2 {
-            font-size: 16px;
-            color: #2d3748;
-            margin-bottom: 25px;
-            font-weight: 600;
-        }
-
-        .chart-container {
-            display: flex;
-            flex-direction: column;
-            gap: 20px;
-        }
-
-        .chart {
-            display: flex;
-            align-items: flex-end;
-            justify-content: space-between;
-            height: 300px;
-            padding: 20px;
-            background-color: #f7fafc;
-            border-radius: 8px;
-        }
-
-        .bar-wrapper {
-            display: flex;
-            gap: 20px;
-            width: 100%;
-            height: 100%;
-            align-items: flex-end;
-            justify-content: space-around;
-        }
-
-        .bar-item {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 12px;
-            flex: 1;
-        }
-
-        .bar {
-            width: 100%;
-            max-width: 40px;
-            background: linear-gradient(180deg, #3182ce 0%, #2c5282 100%);
-            border-radius: 6px 6px 0 0;
-            transition: all 0.3s ease;
-            cursor: pointer;
-            min-height: 10px;
-        }
-
-        .bar:hover {
-            opacity: 0.8;
-            transform: scaleY(1.05);
-        }
-
-        .bar-label {
-            font-size: 12px;
-            color: #718096;
-            font-weight: 500;
-        }
-
-        .chart-info {
-            text-align: center;
-            font-size: 13px;
-            color: #a0aec0;
-            padding-top: 10px;
-            border-top: 1px solid #e2e8f0;
-        }
-
-        /* Achievements Section */
-        .achievements-section {
-            background-color: white;
-            border-radius: 12px;
-            padding: 30px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
-            width: 100%;
-        }
-
-        .achievements-section h2 {
-            font-size: 16px;
-            color: #2d3748;
-            margin-bottom: 25px;
-            font-weight: 600;
-        }
-
-        .achievements-list {
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
-        }
-
-        .achievement-item {
-            background: linear-gradient(135deg, #f7fafc 0%, #edf2f7 100%);
-            border-radius: 12px;
-            padding: 20px;
-            display: flex;
-            gap: 15px;
-            align-items: center;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            border: 1px solid #e2e8f0;
-            position: relative;
-        }
-
-        .achievement-item:hover {
-            transform: translateX(4px);
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-            background: linear-gradient(135deg, #fff5f7 0%, #f0e7ff 100%);
-        }
-
-        .achievement-item-icon {
-            font-size: 40px;
-            flex-shrink: 0;
-        }
-
-        .achievement-item-content {
-            flex: 1;
-        }
-
-        .achievement-item-content h3 {
-            font-size: 14px;
-            color: #2d3748;
-            margin-bottom: 4px;
-            font-weight: 600;
-        }
-
-        .achievement-item-content p {
-            font-size: 13px;
-            color: #718096;
-        }
-
-        .badge {
-            padding: 4px 12px;
-            border-radius: 20px;
-            font-size: 11px;
-            font-weight: 600;
-            text-transform: uppercase;
-            flex-shrink: 0;
-        }
-
-        .badge-new {
-            background-color: #c4b5fd;
-            color: #7c3aed;
-        }
-
-        /* Observations Section */
-        .observations-section {
-            background-color: white;
-            border-radius: 12px;
-            padding: 30px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
-            width: 100%;
-        }
-
-        .observations-section h2 {
-            font-size: 16px;
-            color: #2d3748;
-            margin-bottom: 25px;
-            font-weight: 600;
-        }
-
-        .observations-list {
-            display: flex;
-            flex-direction: column;
-            gap: 20px;
-        }
-
-        .observation-item {
-            padding: 20px;
-            background-color: #f7fafc;
-            border-radius: 10px;
-            border-left: 4px solid #3182ce;
-        }
-
-        .observation-header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 12px;
-        }
-
-        .professor-info h3 {
-            font-size: 14px;
-            color: #2d3748;
-            font-weight: 600;
-            margin: 0;
-        }
-
-        .observation-date {
-            font-size: 12px;
-            color: #a0aec0;
-        }
-
-        .observation-text {
-            font-size: 13px;
-            color: #4a5568;
-            line-height: 1.6;
-            margin: 0;
-            font-style: italic;
-        }
-
-        /* Export Button */
-        .export-btn {
-            width: 100%;
-            padding: 16px 24px;
-            background: linear-gradient(135deg, #3182ce 0%, #2c5282 100%);
-            color: white;
-            border: none;
-            border-radius: 10px;
-            font-size: 15px;
-            font-weight: 600;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 10px;
-            box-shadow: 0 4px 12px rgba(49, 130, 206, 0.3);
-        }
-
-        .export-btn:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 6px 20px rgba(49, 130, 206, 0.4);
-            background: linear-gradient(135deg, #3192d8 0%, #2d5a92 100%);
-        }
-
-        .export-btn:active {
-            transform: translateY(0);
-        }
-        .export-btn i {
-            font-size: 16px;
-            color: white;
-        } 
-        /* Achievements Grid (old) */
-
-        /* Bottom Navigation */
-        .bottom-nav {
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            background-color: white;
-            border-top: 1px solid #e2e8f0;
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            min-height: 80px;
-            height: auto;
-            box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.05);
-            width: 100%;
-            z-index: 1000;
-            padding: 10px 0;
-        }
-
-        .nav-item {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            gap: 6px;
-            cursor: pointer;
-            text-decoration: none;
-            color: #718096;
-            transition: color 0.3s ease;
-            font-size: 11px;
-            font-weight: 500;
-            flex: 1;
-            padding: 10px 5px;
-            text-align: center;
-        }
-
-        .nav-item:hover {
-            color: #2c5282;
-        }
-
-        .nav-item.active {
-            color: #3182ce;
-        }
-
-        .nav-icon {
-            font-size: 24px;
-            display: block;
-        }
-
-        @media (max-width: 768px) {
-            .metrics-grid {
-                grid-template-columns: 1fr;
-            }
-
-            .header {
-                flex-direction: column;
-                gap: 20px;
-                padding: 20px;
-            }
-
-            .header-left h1 {
-                font-size: 24px;
-            }
-
-            .header-left {
-                max-width: 100%;
-            }
-
-            .filter-buttons {
-                width: 100%;
-            }
-
-            .metric-value {
-                font-size: 24px;
-            }
-
-            .bar-wrapper {
-                gap: 12px;
-            }
-
-            .container {
-                padding: 20px 15px 110px 15px;
-            }
-
-            .bottom-nav {
-                min-height: 70px;
-                padding: 8px 0;
-            }
-
-            .nav-item {
-                font-size: 10px;
-                padding: 8px 5px;
-            }
-
-            .nav-icon {
-                font-size: 20px;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .header {
-                padding: 15px;
-                gap: 15px;
-            }
-
-            .header-left h1 {
-                font-size: 22px;
-            }
-
-            .header-left p {
-                font-size: 12px;
-                margin-bottom: 15px;
-            }
-
-            .filter-btn {
-                padding: 8px 16px;
-                font-size: 12px;
-            }
-
-            .icon-btn {
-                width: 36px;
-                height: 36px;
-                font-size: 18px;
-            }
-
-            .metric-value {
-                font-size: 20px;
-            }
-
-            .progress-label {
-                font-size: 13px;
-            }
-
-            .container {
-                padding: 15px 10px 110px 10px;
-            }
-
-            .progress-section {
-                padding: 20px;
-            }
-
-            .activity-section,
-            .achievements-section,
-            .observations-section {
-                padding: 20px;
-            }
-
-            .bottom-nav {
-                min-height: 65px;
-                padding: 6px 0;
-            }
-
-            .nav-item {
-                font-size: 9px;
-                gap: 4px;
-                padding: 6px 4px;
-            }
-
-            .nav-icon {
-                font-size: 18px;
-            }
-
-            .metric-card {
-                padding: 20px;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="/assets/relatiorios.css">
 </head>
+
 <body>
     <!-- Header -->
    <div class="header">
@@ -943,6 +295,6 @@
             // Aqui você poderia adicionar a lógica real para gerar o PDF
         });
     </script>
-<script src="dados.js"></script>
+<script src="/js/dados.js"></script>
 </body>
 </html>
