feat: Adicionando card de atividades recentes na página home

--- a/pages/home.html
+++ b/pages/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home(teste)</title>
+    <title>Home</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -67,9 +67,6 @@
         </section>
     </main>
 
-    <script>
-        lucide.createIcons();
-    </script>
     <section class="metas-container">
             <div class="metas-header">
                 <i data-lucide="bookmark" size="20" stroke-width="2"></i>
@@ -117,5 +114,54 @@
                 </div>
             </div>
         </section>
+
+        <section class="card-atividades">
+            <h2 class="atividades-titulo">Atividades Recentes</h2>
+            
+            <div class="atividades-lista">
+                <div class="atividade-item">
+                    <div class="atividade-info">
+                        <div class="atividade-icone" style="background-color: #eaf4fb; color: #4da0d6;">
+                            <i data-lucide="book-open" size="20" stroke-width="2"></i>
+                        </div>
+                        <div class="atividade-detalhes">
+                            <span class="nome-atividade">Leitura: "O Pequeno Príncipe"</span>
+                            <span class="tempo-atividade">Há 30 minutos</span>
+                        </div>
+                    </div>
+                    <span class="atividade-score" style="background-color: #4da0d6;">95%</span>
+                </div>
+
+                <div class="atividade-item">
+                    <div class="atividade-info">
+                        <div class="atividade-icone" style="background-color: #f5f3fa; color: #a481cd;">
+                            <i data-lucide="divide" size="20" stroke-width="2"></i>
+                        </div>
+                        <div class="atividade-detalhes">
+                            <span class="nome-atividade">Matemática: Frações</span>
+                            <span class="tempo-atividade">Há 2 horas</span>
+                        </div>
+                    </div>
+                    <span class="atividade-score" style="background-color: #b594d6;">78%</span>
+                </div>
+
+                <div class="atividade-item">
+                    <div class="atividade-info">
+                        <div class="atividade-icone" style="background-color: #f3f4f6; color: #f59e0b;">
+                            <i data-lucide="pen-tool" size="20" stroke-width="2"></i>
+                        </div>
+                        <div class="atividade-detalhes">
+                            <span class="nome-atividade">Escrita: Redação sobre animais</span>
+                            <span class="tempo-atividade">Ontem</span>
+                        </div>
+                    </div>
+                    <span class="atividade-score" style="background-color: #4da0d6;">88%</span>
+                </div>
+            </div>
+        </section>
+
+        <script>
+        lucide.createIcons();
+    </script>
 </body>
 </html>
