feat: Adicionando navbar na página de PEI's

--- a/pages/home.html
+++ b/pages/home.html
@@ -161,7 +161,8 @@
         </section>
     </main>
 
-    <nav class="bottom-nav">
+    <section>
+        <nav class="bottom-nav">
         <div class="nav-container">
             <a href="#" class="nav-item active">
                 <i data-lucide="home" stroke-width="2"></i>
@@ -193,5 +194,7 @@
     <script>
         lucide.createIcons();
     </script>
+    </section>
+    
 </body>
 </html>
