feat: Adicionando navbar na página de Perfil

--- a/pages/home.html
+++ b/pages/home.html
@@ -161,7 +161,7 @@
         </section>
     </main>
 
-    <section>
+    <section class="navbar">
         <nav class="bottom-nav">
         <div class="nav-container">
             <a href="#" class="nav-item active">
