--- a/pages/relatorios.html
+++ b/pages/relatorios.html
@@ -247,9 +247,10 @@
         </div>
     </div>
 
-    <nav class="bottom-nav">
+    <section class="navbar">
+        <nav class="bottom-nav">
         <div class="nav-container">
-            <a href="/pages/home.html" class="nav-item active">
+            <a href="/pages/home.html" class="nav-item">
                 <i data-lucide="home" stroke-width="2"></i>
                 <span>Início</span>
             </a>
@@ -264,7 +265,7 @@
                 <span>Estudos</span>
             </a>
             
-            <a href="#" class="nav-item">
+            <a href="#" class="nav-item active">
                 <i data-lucide="bar-chart-2" stroke-width="2"></i>
                 <span>Relatórios</span>
             </a>
@@ -278,6 +279,8 @@
             </script>
         </div>
     </nav>
+    </section>
+    
 
     <script>
         // Interatividade dos botões de filtro
