--- a/pages/estudos.html
+++ b/pages/estudos.html
@@ -18,7 +18,7 @@
 
     <nav class="bottom-nav">
         <div class="nav-container">
-            <a href="/pages/home.html" class="nav-item active">
+            <a href="/pages/home.html" class="nav-item">
                 <i data-lucide="home" stroke-width="2"></i>
                 <span>Início</span>
             </a>
@@ -28,7 +28,7 @@
                 <span>PEI</span>
             </a>
             
-            <a href="#" class="nav-item">
+            <a href="#" class="nav-item active">
                 <i data-lucide="book-open" stroke-width="2"></i>
                 <span>Estudos</span>
             </a>
