importando interações com js da pagina de pei

--- a/pages/pei.html
+++ b/pages/pei.html
@@ -10,6 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="/assets/pei.css">
+    <script src="/js/pei.js"></script>
 
     <style></style>
   </head>
