--- a/pages/home.html
+++ b/pages/home.html
@@ -10,8 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
     
     <script src="https://unpkg.com/lucide@latest"></script>
-    <link rel="stylesheet" href="/assets/home.css">
-    <link rel="stylesheet" href="/assets/navbar.css">
+    <link rel="stylesheet" href="../assets/home.css">
+    <link rel="stylesheet" href="../assets/navbar.css">
 
 </head>
 
