--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -10,8 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/assets/perfil.css">
-    <script src="/js/perfil.js"></script>
+    <link rel="stylesheet" href="../assets/perfil.css">
+    <script src="../js/perfil.js"></script>
 
   </head>
   <body>
@@ -229,14 +229,14 @@
     <!-- NAVBAR -->
     <nav class="bottom-nav">
       <div class="nav-container">
-        <a href="/pages/home.html" class="nav-item">
+        <a href="./home.html" class="nav-item">
           <svg viewBox="0 0 24 24">
             <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z" />
             <polyline points="9 22 9 12 15 12 15 22" />
           </svg>
           <span>Início</span>
         </a>
-        <a href="/pages/pei.html" class="nav-item">
+        <a href="./pei.html" class="nav-item">
           <svg viewBox="0 0 24 24">
             <circle cx="12" cy="12" r="10" />
             <circle cx="12" cy="12" r="6" />
@@ -244,14 +244,14 @@
           </svg>
           <span>PEI</span>
         </a>
-        <a href="/pages/estudos.html" class="nav-item">
+        <a href="./estudos.html" class="nav-item">
           <svg viewBox="0 0 24 24">
             <path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z" />
             <path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z" />
           </svg>
           <span>Estudos</span>
         </a>
-        <a href="/pages/relatorios.html" class="nav-item">
+        <a href="./relatorios.html" class="nav-item">
           <svg viewBox="0 0 24 24">
             <line x1="18" y1="20" x2="18" y2="10" />
             <line x1="12" y1="20" x2="12" y2="4" />
