fix/corrigindo nome do arquivo css dentro da pagina de relatorios

--- a/pages/relatorios.html
+++ b/pages/relatorios.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 
     <script src="https://unpkg.com/lucide@latest"></script>
-    <link rel="stylesheet" href="../assets/relatiorios.css">
+    <link rel="stylesheet" href="../assets/relatorios.css">
     <link rel="stylesheet" href="../assets/navbar.css">
 </head>
 
@@ -301,6 +301,6 @@
             // Aqui você poderia adicionar a lógica real para gerar o PDF
         });
     </script>
-<script src="../js/dados.js"></script>
+<script src="../js/relatorios.js"></script>
 </body>
 </html>
